# level0

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.sh  build_trunk.sh  index.html
src/: lib.rs  main.rs  simple_main.rs  simple_wasm.rs
