[package]
name = "bevy_3d_fog_scene"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.17", features = ["default"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []
wasm_js = []

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
